print grain ns per sample (with and without class 2)

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -49,14 +49,9 @@
     "boxplotcolour = \"lightgrey\"\n",
     "\n",
     "print(all_stats.columns)\n",
+    "print(len(all_stats))\n",
     "print(\"----\")\n",
-    "print(all_disordered_segments.columns)\n",
-    "\n",
-    "# print all display names and counts\n",
-    "print(\"Display names:\")\n",
-    "for display_name, count in all_stats[\"display_name\"].value_counts().items():\n",
-    "    print(f\"{display_name}: {count}\")\n",
-    "print(\"----\")"
+    "print(all_disordered_segments.columns)"
    ]
   },
   {
@@ -545,15 +540,16 @@
     "                }\n",
     "            )\n",
     "\n",
-    "bigdf = pd.DataFrame(bigdf_list)\n",
-    "bigdf_only_c1c2 = bigdf[bigdf[\"class_1_and_2\"] == 1]\n",
-    "bigdf_tel12c = bigdf[bigdf[\"display_name\"] == \"TEL12control\"]\n",
+    "alldf = pd.DataFrame(bigdf_list)\n",
+    "print(f\"num grains in bigdf: {len(alldf)}\")\n",
+    "alldf_only_c1c2 = alldf[alldf[\"class_1_and_2\"] == 1]\n",
+    "bigdf_tel12c = alldf[alldf[\"display_name\"] == \"TEL12control\"]\n",
     "\n",
     "################ Mean branch length for only TRF1 and TRF2\n",
     "\n",
     "print(\"Mean branch length for only TRF1 and TRF2\")\n",
     "plt.figure()\n",
-    "mean_branch_length_trf1_trf2 = bigdf[bigdf[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\"])]\n",
+    "mean_branch_length_trf1_trf2 = alldf[alldf[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\"])]\n",
     "sns.stripplot(x=\"display_name\", y=\"mean_branch_distance\", data=mean_branch_length_trf1_trf2)\n",
     "sns.boxplot(\n",
     "    x=\"display_name\",\n",
@@ -568,7 +564,7 @@
     "\n",
     "# same but for only c1c2\n",
     "print(\"Mean branch length C1C2 for only TRF1 and TRF2\")\n",
-    "df_mean_bl_plot = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])]\n",
+    "df_mean_bl_plot = alldf_only_c1c2[alldf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])]\n",
     "# add all control data to this df\n",
     "df_mean_bl_plot = pd.concat([df_mean_bl_plot, bigdf_tel12c])\n",
     "print(df_mean_bl_plot[\"display_name\"].unique())\n",
@@ -591,7 +587,7 @@
     "    \"TEL12TRF2ch\",\n",
     "    \"TEL12TRF2cmyb\",\n",
     "]\n",
-    "mean_branch_length_df = bigdf[bigdf[\"display_name\"].isin(plot_tbl_all_but_s_c_order)]\n",
+    "mean_branch_length_df = alldf[alldf[\"display_name\"].isin(plot_tbl_all_but_s_c_order)]\n",
     "\n",
     "# total branch length\n",
     "plt.figure()\n",
@@ -607,8 +603,8 @@
     "######################## total branch length C1&2 for TRF1, TRF2, shelterin\n",
     "\n",
     "print(\"total branch length C1&2 for TRF1, TRF2, shelterin\")\n",
-    "mean_branch_length_trf1_trf2_shelterin = bigdf_only_c1c2[\n",
-    "    bigdf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
+    "mean_branch_length_trf1_trf2_shelterin = alldf_only_c1c2[\n",
+    "    alldf_only_c1c2[\"display_name\"].isin([\"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
     "]\n",
     "\n",
     "plt.figure()\n",
@@ -626,8 +622,8 @@
     "######################## SAME BUT FOR ONLY MAIN SAMPLES ONLY\n",
     "\n",
     "print(\"total branch length for main samples only\")\n",
-    "mean_branch_length_control_trf1_trf2_shelterin = bigdf[\n",
-    "    bigdf[\"display_name\"].isin([\"TEL12control\", \"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
+    "mean_branch_length_control_trf1_trf2_shelterin = alldf[\n",
+    "    alldf[\"display_name\"].isin([\"TEL12control\", \"TEL12TRF1\", \"TEL12TRF2\", \"TEL12shelterin\"])\n",
     "]\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=mean_branch_length_control_trf1_trf2_shelterin)\n",
@@ -648,9 +644,9 @@
     "\n",
     "print(\"bridged vs non bridged\")\n",
     "total_branch_bridge_threshold = 600\n",
-    "bigdf[\"bridged\"] = bigdf[\"total_branch_length\"] > total_branch_bridge_threshold\n",
-    "bridged = bigdf[bigdf[\"bridged\"] == True]\n",
-    "not_bridged = bigdf[bigdf[\"bridged\"] == False]\n",
+    "alldf[\"bridged\"] = alldf[\"total_branch_length\"] > total_branch_bridge_threshold\n",
+    "bridged = alldf[alldf[\"bridged\"] == True]\n",
+    "not_bridged = alldf[alldf[\"bridged\"] == False]\n",
     "plt.figure()\n",
     "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=bridged)\n",
     "sns.boxplot(x=\"display_name\", y=\"total_branch_length\", data=bridged, color=boxplotcolour)\n",
@@ -664,8 +660,8 @@
     "\n",
     "\n",
     "# for each basename, print number of bridged vs not bridged\n",
-    "for displayname in bigdf_only_c1c2[\"display_name\"].unique():\n",
-    "    basename_data = bigdf[bigdf[\"display_name\"] == displayname]\n",
+    "for displayname in alldf_only_c1c2[\"display_name\"].unique():\n",
+    "    basename_data = alldf[alldf[\"display_name\"] == displayname]\n",
     "    bridged = basename_data[basename_data[\"bridged\"] == True]\n",
     "    not_bridged = basename_data[basename_data[\"bridged\"] == False]\n",
     "    percentage_bridged = len(bridged) / (len(bridged) + len(not_bridged)) * 100\n",
@@ -680,14 +676,14 @@
     "print(\"tbl vs volume scatter for all\")\n",
     "\n",
     "plt.figure()\n",
-    "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=bigdf_only_c1c2)\n",
+    "sns.scatterplot(x=\"total_protein_volume\", y=\"total_branch_length\", data=alldf_only_c1c2)\n",
     "plt.show()\n",
     "\n",
     "############# TBL vs protein volume scatter for only TRF1, TRF2, shelterin\n",
     "\n",
-    "trf1_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12TRF1\"]\n",
-    "trf2_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12TRF2\"]\n",
-    "shelterin_only = bigdf_only_c1c2[bigdf_only_c1c2[\"display_name\"] == \"TEL12shelterin\"]\n",
+    "trf1_only = alldf_only_c1c2[alldf_only_c1c2[\"display_name\"] == \"TEL12TRF1\"]\n",
+    "trf2_only = alldf_only_c1c2[alldf_only_c1c2[\"display_name\"] == \"TEL12TRF2\"]\n",
+    "shelterin_only = alldf_only_c1c2[alldf_only_c1c2[\"display_name\"] == \"TEL12shelterin\"]\n",
     "\n",
     "print(\"tbl vs protein volume scatter for TRF1, TRF2, shelterin\")\n",
     "plt.figure()\n",
@@ -720,14 +716,82 @@
     "############### total protein volume\n",
     "\n",
     "plt.figure()\n",
-    "sns.stripplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2)\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_protein_volume\", data=alldf_only_c1c2)\n",
     "# sns.boxplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2, color=boxplotcolour)\n",
-    "boxplot(x=\"display_name\", y=\"total_protein_volume\", data=bigdf_only_c1c2)\n",
+    "boxplot(x=\"display_name\", y=\"total_protein_volume\", data=alldf_only_c1c2)\n",
     "plt.title(\"Total protein volume\")\n",
     "plt.xlabel(\"sample type\", fontsize=14)\n",
     "plt.ylabel(\"Total protein volume ($nm^3$)\", fontsize=14)\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(all_stats))\n",
+    "\n",
+    "all_df_list = []\n",
+    "images = all_stats[\"image\"].unique()\n",
+    "for image in images:\n",
+    "    subdata_images = all_stats[all_stats[\"image\"] == image]\n",
+    "    grain_numbers = subdata_images[\"grain_number\"].unique()\n",
+    "    for grain_number in grain_numbers:\n",
+    "        subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
+    "        classes = subdata_grain[\"class_number\"].unique()\n",
+    "        disordered_segment_data = all_disordered_segments[all_disordered_segments[\"image\"] == image]\n",
+    "        disordered_segment_data = disordered_segment_data[disordered_segment_data[\"grain_number\"] == grain_number]\n",
+    "        branch_distances = disordered_segment_data[\"branch_distance\"]\n",
+    "        mean_branch_distance = np.mean(branch_distances)\n",
+    "        tbl = subdata_grain[\"total_branch_lengths\"].values[0]\n",
+    "        mean_branch_distance_divided_by_total_branch_length = mean_branch_distance / tbl\n",
+    "        displayname = subdata_grain[\"basename\"].values[0]\n",
+    "        display_name = subdata_grain[\"display_name\"].values[0]\n",
+    "        # add to df list\n",
+    "        all_df_list.append(\n",
+    "            {\n",
+    "                \"image\": image,\n",
+    "                \"grain_number\": grain_number,\n",
+    "                \"mean_branch_distance\": mean_branch_distance,\n",
+    "                \"basename\": displayname,\n",
+    "                \"display_name\": display_name,\n",
+    "                \"mean_branch_distance_divided_by_total_branch_length\": mean_branch_distance_divided_by_total_branch_length,\n",
+    "                \"total_branch_length\": tbl,\n",
+    "                \"total_protein_volume\": subdata_grain[subdata_grain[\"class_number\"] == 2][\"volume\"].sum()\n",
+    "                / (1e-9) ** 3,\n",
+    "                \"class_1_and_2\": 1 if 1 in classes and 2 in classes else 0,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
+    "alldf = pd.DataFrame(all_df_list)\n",
+    "print(f\"num grains in alldf: {len(alldf)}\")\n",
+    "\n",
+    "# print sample types with number of samples\n",
+    "print(\"-------- all samples ----------\")\n",
+    "for display_name in alldf[\"display_name\"].unique():\n",
+    "    print(f\"{display_name}: {len(alldf[alldf['display_name'] == display_name])}\")\n",
+    "print(f\"total: {len(alldf)}\")\n",
+    "\n",
+    "# only if they have class 1 and 2\n",
+    "print(\"\\n\")\n",
+    "print(\"-------- only grains with proteins ----------\")\n",
+    "alldf_only_c1c2 = alldf[alldf[\"class_1_and_2\"] == 1]\n",
+    "# print sample types with number of samples\n",
+    "for display_name in alldf[\"display_name\"].unique():\n",
+    "    print(f\"{display_name}: {len(alldf_only_c1c2[alldf_only_c1c2['display_name'] == display_name])}\")\n",
+    "print(f\"total: {len(alldf_only_c1c2)}\")\n",
+    "\n",
+    "print(\"\\n\")\n",
+    "print(\"-------- only grains without proteins ----------\")\n",
+    "alldf_only_c1 = alldf[alldf[\"class_1_and_2\"] == 0]\n",
+    "# print sample types with number of samples\n",
+    "for display_name in alldf[\"display_name\"].unique():\n",
+    "    print(f\"{display_name}: {len(alldf_only_c1[alldf_only_c1['display_name'] == display_name])}\")\n",
+    "print(f\"total: {len(alldf_only_c1)}\")\n",
+    "print(\"\\n\")"
    ]
   }
  ],
