add removal of data between date ranges

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
-    "\n",
+    "from datetime import datetime\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,14 +30,27 @@
     "assert all_disordered_segments_file.exists()\n",
     "all_disordered_segments = pd.read_csv(all_disordered_segments_file)\n",
     "\n",
+    "# create a date column using the yymmdd date at the start of the \"image\" column\n",
+    "all_stats[\"date\"] = all_stats[\"image\"].str.split(\"_\").str[0]\n",
+    "all_disordered_segments[\"date\"] = all_disordered_segments[\"image\"].str.split(\"_\").str[0]\n",
     "# vet by date\n",
-    "date_exclude = \"2025\"\n",
-    "all_stats = all_stats[~all_stats[\"image\"].str.contains(date_exclude)]\n",
-    "all_disordered_segments = all_disordered_segments[~all_disordered_segments[\"image\"].str.contains(date_exclude)]\n",
+    "data_exclude_range_start = \"20250101\"\n",
+    "data_exclude_range_end = \"20250301\"\n",
+    "# exclude any rows of all_stats that contain dates in this range\n",
+    "all_stats[\"date\"] = pd.to_datetime(all_stats[\"date\"], format=\"%Y%m%d\")\n",
+    "all_disordered_segments[\"date\"] = pd.to_datetime(all_disordered_segments[\"date\"], format=\"%Y%m%d\")\n",
+    "all_stats = all_stats[~((all_stats[\"date\"] >= data_exclude_range_start) & (all_stats[\"date\"] <= data_exclude_range_end))]\n",
+    "all_disordered_segments = all_disordered_segments[~((all_disordered_segments[\"date\"] >= data_exclude_range_start) & (all_disordered_segments[\"date\"] <= data_exclude_range_end))]\n",
+    "\n",
     "\n",
     "# create a display name column that takes the basename column and strips everything before the first forward slash,\n",
     "# eg: \"data-libby-curated/TEL80shelterin\" would be displayed as \"TEL80shelterin\"\n",
     "all_stats[\"display_name\"] = all_stats[\"basename\"].str.split(\"/\").str[1]\n",
+    "# print unique display names\n",
+    "unique_display_names = all_stats[\"display_name\"].unique()\n",
+    "print(\"Unique display names:\")\n",
+    "for name in unique_display_names:\n",
+    "    print(name)\n",
     "\n",
     "# convert TBL to be in nm\n",
     "all_stats[\"total_branch_lengths\"] /= 1e-9\n",
@@ -340,7 +353,7 @@
     "# print image names\n",
     "print(data_tbl_anomaly[\"image\"].unique())\n",
     "\n",
-    "print(\"median heights vs total branch lengths for tel80 control\")\n",
+    "print(\"median heights vs total branch lengths for tel12 control\")\n",
     "plt.figure()\n",
     "plt.scatter(tbls, heights)\n",
     "plt.xlabel(\"Total branch lengths (nm)\")\n",
