Add TBL bridging plot

--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -39,8 +39,15 @@
     "# exclude any rows of all_stats that contain dates in this range\n",
     "all_stats[\"date\"] = pd.to_datetime(all_stats[\"date\"], format=\"%Y%m%d\")\n",
     "all_disordered_segments[\"date\"] = pd.to_datetime(all_disordered_segments[\"date\"], format=\"%Y%m%d\")\n",
-    "all_stats = all_stats[~((all_stats[\"date\"] >= data_exclude_range_start) & (all_stats[\"date\"] <= data_exclude_range_end))]\n",
-    "all_disordered_segments = all_disordered_segments[~((all_disordered_segments[\"date\"] >= data_exclude_range_start) & (all_disordered_segments[\"date\"] <= data_exclude_range_end))]\n",
+    "all_stats = all_stats[\n",
+    "    ~((all_stats[\"date\"] >= data_exclude_range_start) & (all_stats[\"date\"] <= data_exclude_range_end))\n",
+    "]\n",
+    "all_disordered_segments = all_disordered_segments[\n",
+    "    ~(\n",
+    "        (all_disordered_segments[\"date\"] >= data_exclude_range_start)\n",
+    "        & (all_disordered_segments[\"date\"] <= data_exclude_range_end)\n",
+    "    )\n",
+    "]\n",
     "\n",
     "\n",
     "# create a display name column that takes the basename column and strips everything before the first forward slash,\n",
@@ -683,6 +690,41 @@
     "        f\"{displayname:<20} bridged: {len(bridged):<8} not bridged: {len(not_bridged):<8} percentage: {percentage_bridged:>10,.2f}%   ratio: {len(bridged) / len(not_bridged):<10,.2f}\"\n",
     "    )\n",
     "\n",
+    "\n",
+    "########################## TBL bridged vs non bridged class 1&2 only\n",
+    "alldf_only_c1c2 = alldf_only_c1c2.copy()\n",
+    "alldf_only_c1c2[\"bridged\"] = alldf_only_c1c2[\"total_branch_length\"] > total_branch_bridge_threshold\n",
+    "print(\"TBL bridged vs non bridged class 1&2 only\")\n",
+    "plt.figure()\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=alldf_only_c1c2[alldf_only_c1c2[\"bridged\"] == True])\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_branch_length\",\n",
+    "    data=alldf_only_c1c2[alldf_only_c1c2[\"bridged\"] == True],\n",
+    "    color=boxplotcolour,\n",
+    ")\n",
+    "sns.stripplot(x=\"display_name\", y=\"total_branch_length\", data=alldf_only_c1c2[alldf_only_c1c2[\"bridged\"] == False])\n",
+    "sns.boxplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_branch_length\",\n",
+    "    data=alldf_only_c1c2[alldf_only_c1c2[\"bridged\"] == False],\n",
+    "    color=boxplotcolour,\n",
+    ")\n",
+    "plt.title(\"Total branch length bridged vs not bridged\")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total branch length ($nm$)\", fontsize=14)\n",
+    "plt.xlabel(\"\")\n",
+    "plt.show()\n",
+    "# for each basename, print number of bridged vs not bridged\n",
+    "for displayname in alldf_only_c1c2[\"display_name\"].unique():\n",
+    "    basename_data = alldf_only_c1c2[alldf_only_c1c2[\"display_name\"] == displayname]\n",
+    "    bridged = basename_data[basename_data[\"bridged\"] == True]\n",
+    "    not_bridged = basename_data[basename_data[\"bridged\"] == False]\n",
+    "    percentage_bridged = len(bridged) / (len(bridged) + len(not_bridged)) * 100\n",
+    "    # print with padding so it's all lined up\n",
+    "    print(\n",
+    "        f\"{displayname:<20} bridged: {len(bridged):<8} not bridged: {len(not_bridged):<8} percentage: {percentage_bridged:>10,.2f}%   ratio: {len(bridged) / len(not_bridged):<10,.2f}\"\n",
+    "    )\n",
     "\n",
     "########################## volume vs total branch length\n",
     "\n",
