--- a/shelterin-data-explore-curated.ipynb
+++ b/shelterin-data-explore-curated.ipynb
@@ -22,36 +22,37 @@
    "source": [
     "base_dir = Path(\"/Users/sylvi/topo_data/shelterin\")\n",
     "assert base_dir.exists()\n",
-    "all_stats_file = base_dir / \"output-libby-curated\" / \"all_statistics.csv\"\n",
+    "all_stats_file = base_dir / \"output-data-redo\" / \"all_statistics.csv\"\n",
     "assert all_stats_file.exists()\n",
     "all_stats = pd.read_csv(all_stats_file)\n",
     "\n",
-    "all_disordered_segments_file = base_dir / \"output-libby-curated\" / \"all_disordered_segment_statistics.csv\"\n",
+    "all_disordered_segments_file = base_dir / \"output-data-redo\" / \"all_disordered_segment_statistics.csv\"\n",
     "assert all_disordered_segments_file.exists()\n",
     "all_disordered_segments = pd.read_csv(all_disordered_segments_file)\n",
     "\n",
     "# create a date column using the yymmdd date at the start of the \"image\" column\n",
     "all_stats[\"date\"] = all_stats[\"image\"].str.split(\"_\").str[0]\n",
     "all_disordered_segments[\"date\"] = all_disordered_segments[\"image\"].str.split(\"_\").str[0]\n",
-    "# vet by date\n",
-    "data_exclude_range_start = \"20250101\"\n",
-    "data_exclude_range_end = \"20250301\"\n",
-    "# exclude any rows of all_stats that contain dates in this range\n",
-    "all_stats[\"date\"] = pd.to_datetime(all_stats[\"date\"], format=\"%Y%m%d\")\n",
-    "all_disordered_segments[\"date\"] = pd.to_datetime(all_disordered_segments[\"date\"], format=\"%Y%m%d\")\n",
-    "all_stats = all_stats[\n",
-    "    ~((all_stats[\"date\"] >= data_exclude_range_start) & (all_stats[\"date\"] <= data_exclude_range_end))\n",
-    "]\n",
-    "all_disordered_segments = all_disordered_segments[\n",
-    "    ~(\n",
-    "        (all_disordered_segments[\"date\"] >= data_exclude_range_start)\n",
-    "        & (all_disordered_segments[\"date\"] <= data_exclude_range_end)\n",
-    "    )\n",
-    "]\n",
+    "\n",
+    "# # vet by date\n",
+    "# data_exclude_range_start = \"20250101\"\n",
+    "# data_exclude_range_end = \"20250301\"\n",
+    "# # exclude any rows of all_stats that contain dates in this range\n",
+    "# all_stats[\"date\"] = pd.to_datetime(all_stats[\"date\"], format=\"%Y%m%d\")\n",
+    "# all_disordered_segments[\"date\"] = pd.to_datetime(all_disordered_segments[\"date\"], format=\"%Y%m%d\")\n",
+    "# all_stats = all_stats[\n",
+    "#     ~((all_stats[\"date\"] >= data_exclude_range_start) & (all_stats[\"date\"] <= data_exclude_range_end))\n",
+    "# ]\n",
+    "# all_disordered_segments = all_disordered_segments[\n",
+    "#     ~(\n",
+    "#         (all_disordered_segments[\"date\"] >= data_exclude_range_start)\n",
+    "#         & (all_disordered_segments[\"date\"] <= data_exclude_range_end)\n",
+    "#     )\n",
+    "# ]\n",
     "\n",
     "\n",
     "# create a display name column that takes the basename column and strips everything before the first forward slash,\n",
-    "# eg: \"data-libby-curated/TEL80shelterin\" would be displayed as \"TEL80shelterin\"\n",
+    "# eg: \"data-redo/TEL80shelterin\" would be displayed as \"TEL80shelterin\"\n",
     "all_stats[\"display_name\"] = all_stats[\"basename\"].str.split(\"/\").str[1]\n",
     "# print unique display names\n",
     "unique_display_names = all_stats[\"display_name\"].unique()\n",
@@ -320,6 +321,7 @@
    "outputs": [],
    "source": [
     "data_tel12c = all_stats[all_stats[\"basename\"].str.contains(\"TEL12control\")]\n",
+    "print(f\"tel12c: {len(data_tel12c)}\")\n",
     "images = data_tel12c[\"image\"].unique()\n",
     "tbl_height_pairs = []\n",
     "for image in images:\n",
@@ -345,11 +347,11 @@
     "heights = [pair[1] for pair in tbl_height_pairs]\n",
     "\n",
     "median_median_height = np.median(heights)\n",
-    "iqr_median_height = np.percentile(heights, 75) - np.percentile(heights, 25)\n",
+    "# iqr_median_height = np.percentile(heights, 75) - np.percentile(heights, 25)\n",
     "median_total_branch_lengths = np.median(tbls)\n",
-    "iqr_total_branch_lengths = np.percentile(tbls, 75) - np.percentile(tbls, 25)\n",
+    "# iqr_total_branch_lengths = np.percentile(tbls, 75) - np.percentile(tbls, 25)\n",
     "\n",
-    "print(f\"TEL12control | median median height: {median_median_height:.2f} nm | iqr: {iqr_median_height:.2f} nm\")\n",
+    "# print(f\"TEL12control | median median height: {median_median_height:.2f} nm | iqr: {iqr_median_height:.2f} nm\")\n",
     "print(\n",
     "    f\"TEL12control | median total branch lengths: {median_total_branch_lengths:.2f} nm | iqr: {iqr_total_branch_lengths:.2f} nm\"\n",
     ")\n",
@@ -373,7 +375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# TBL & median height for TEL12"
+    "# TBL & median height for TEL80"
    ]
   },
   {
@@ -496,7 +498,32 @@
     "plt.xticks(rotation=90)\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.ylabel(\"total branch length (nm)\")\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(all_stats))\n",
+    "data_tel12 = all_stats[all_stats[\"basename\"].str.contains(\"TEL12\")]\n",
+    "print(len(data_tel12))\n",
+    "\n",
+    "images = all_stats[\"image\"].unique()\n",
+    "for image in images:\n",
+    "    subdata_images = all_stats[all_stats[\"image\"] == image]\n",
+    "    grain_numbers = subdata_images[\"grain_number\"].unique()\n",
+    "    print(f\"grain numbers: {grain_numbers}\")\n",
+    "    for grain_number in grain_numbers:\n",
+    "        print(f\"grain number: {grain_number}\")\n",
+    "        subdata_grain = subdata_images[subdata_images[\"grain_number\"] == grain_number]\n",
+    "        class_numbers = subdata_grain[\"class_number\"].unique()\n",
+    "        print(f\"class numbers: {class_numbers}\")\n",
+    "        if 1 in class_numbers and 2 in class_numbers:\n",
+    "            print(f\"image: {image} | grain number: {grain_number} | class numbers: {class_numbers}\")"
    ]
   },
   {
