Add histograms to scatter plot (jointplot)

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -218,20 +218,22 @@
     "simpleticks()\n",
     "plt.show()\n",
     "\n",
-    "# plot protein volume against TBL for grains with protein, with volume on y and TBL on x\n",
+    "# plot protein volume against TBL for grains with protein, with volume on y and TBL on x, using jointplot\n",
     "plt.figure()\n",
     "# scatterplot\n",
     "# plot TRF1 in orange and TRF2 in blue\n",
-    "sns.scatterplot(\n",
+    "sns.jointplot(\n",
     "    x=\"total_branch_lengths\",\n",
     "    y=\"total_protein_volume\",\n",
     "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
     "    hue=\"display_name\",\n",
     "    palette={\"TEL12TRF1\": \"orange\", \"TEL12TRF2\": \"blue\"},\n",
+    "    alpha=0.5,\n",
     ")\n",
     "plt.xlabel(\"total branch lengths (nm)\")\n",
     "plt.ylabel(\"total protein volume (nm^3)\")\n",
-    "plt.title(\"total protein volume vs total branch lengths for grains with protein\")\n",
+    "# plt.title(\"total protein volume vs total branch lengths for grains with protein\")\n",
+    "plt.tight_layout()\n",
     "plt.show()\n"
    ]
   }
