Add number of DNA & protein segments

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c80a5dd7",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e85bc1c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,7 @@
     "assert all_disordered_segments_file.exists()\n",
     "all_disordered_segments_df = pd.read_csv(all_disordered_segments_file)\n",
     "\n",
-    "images_to_delete = [\n",
-    "    \"20250502_5nMTRF2_1ng_tel12picozEE_nicl.0_00010\"\n",
-    "]\n",
+    "images_to_delete = [\"20250502_5nMTRF2_1ng_tel12picozEE_nicl.0_00010\"]\n",
     "# remove images to delete\n",
     "for image_name in images_to_delete:\n",
     "    len_before = len(all_stats_df)\n",
@@ -41,7 +39,9 @@
     "    len_after = len(all_stats_df)\n",
     "    assert len_before - len_after > 0\n",
     "    len_before = len(all_disordered_segments_df)\n",
-    "    all_disordered_segments_df = all_disordered_segments_df[~all_disordered_segments_df[\"image\"].str.contains(image_name)]\n",
+    "    all_disordered_segments_df = all_disordered_segments_df[\n",
+    "        ~all_disordered_segments_df[\"image\"].str.contains(image_name)\n",
+    "    ]\n",
     "    len_after = len(all_disordered_segments_df)\n",
     "    assert len_before - len_after > 0\n",
     "    print(f\"removed {image_name} from all stats and all disordered segments\")\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd9260ea",
+   "id": "2",
    "metadata": {},
    "source": [
     "#### pretty plotting"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6e969a",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f255a7de",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f162cc71",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,6 +162,8 @@
     "        # grab just this grain's data\n",
     "        grain_data = all_grains_data[all_grains_data[\"grain_number\"] == grain_number]\n",
     "        classes = grain_data[\"class_number\"].unique()\n",
+    "        num_dna_segments = len(grain_data[grain_data[\"class_number\"] == 1])\n",
+    "        num_protein_segments = len(grain_data[grain_data[\"class_number\"] == 2])\n",
     "        protein_present = 1 if 1 in classes and 2 in classes else 0\n",
     "        print(f\"    grain number: {grain_number}, classes: {classes}\")\n",
     "\n",
@@ -185,6 +187,8 @@
     "                \"image\": image,\n",
     "                \"grain_number\": grain_number,\n",
     "                \"protein_present\": protein_present,\n",
+    "                \"num_dna_segments\": num_dna_segments,\n",
+    "                \"num_protein_segments\": num_protein_segments,\n",
     "                \"mean_branch_distance\": mean_branch_distance,\n",
     "                \"total_branch_lengths\": tbl,\n",
     "                \"total_protein_volume\": total_protein_volume,\n",
@@ -202,15 +206,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "628aa74a",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Plot TBL vs display_name for only grains with protein\n",
     "plt.figure()\n",
     "# stripplot with violins\n",
-    "sns.violinplot(x=\"display_name\", y=\"total_branch_lengths\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour)\n",
-    "sns.stripplot(x=\"display_name\", y=\"total_branch_lengths\", data=grains_df[grains_df[\"protein_present\"] == 1], color=\"black\", alpha=0.5)\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"total_branch_lengths\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_branch_lengths\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
     "plt.xticks(rotation=90)\n",
     "plt.ylabel(\"total branch lengths (nm)\")\n",
     "plt.xlabel(\"sample type\")\n",
@@ -234,6 +246,44 @@
     "plt.ylabel(\"total protein volume (nm^3)\")\n",
     "# plt.title(\"total protein volume vs total branch lengths for grains with protein\")\n",
     "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# number of DNA segments vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"num_dna_segments\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"num_dna_segments\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"number of DNA segments\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"number of DNA segments for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
+    "# number of protein segments vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"num_protein_segments\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"num_protein_segments\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"number of protein segments\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"number of protein segments for grains with protein\")\n",
+    "simpleticks()\n",
     "plt.show()\n"
    ]
   }
