Add mean branch distance

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -284,7 +284,26 @@
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"number of protein segments for grains with protein\")\n",
     "simpleticks()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# mean branch distance vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"mean_branch_distance\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"mean_branch_distance\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"mean branch distance (nm)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"mean branch distance for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()"
    ]
   }
  ],
