Add stats tests for TBL

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -305,6 +305,28 @@
     "simpleticks()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cbe241d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stat test to see if there is a difference in TBL between TRF1 and TRF2\n",
+    "from scipy import stats\n",
+    "# get the TBL for TRF1 and TRF2\n",
+    "trf1_tbl = grains_df[grains_df[\"display_name\"].str.contains(\"TRF1\")][\"total_branch_lengths\"]\n",
+    "trf2_tbl = grains_df[grains_df[\"display_name\"].str.contains(\"TRF2\")][\"total_branch_lengths\"]\n",
+    "significance_level = 0.05\n",
+    "# do a t-test\n",
+    "t_stat, p_val = stats.ttest_ind(trf1_tbl, trf2_tbl)\n",
+    "print(f\"t-statistic: {t_stat}, p-value: {p_val} Significant: {p_val < significance_level}\")\n",
+    "# do a Mann-Whitney U test\n",
+    "u_stat, p_val = stats.mannwhitneyu(trf1_tbl, trf2_tbl)\n",
+    "print(f\"U-statistic: {u_stat}, p-value: {p_val} Significant: {p_val < significance_level}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
