--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -31,7 +31,10 @@
     "assert all_disordered_segments_file.exists()\n",
     "all_disordered_segments_df = pd.read_csv(all_disordered_segments_file)\n",
     "\n",
-    "images_to_delete = [\"20250502_5nMTRF2_1ng_tel12picozEE_nicl.0_00010\"]\n",
+    "images_to_delete = [\n",
+    "    \"20250502_5nMTRF2_1ng_tel12picozEE_nicl.0_00010\",\n",
+    "    \"20250508_5nMTRF1cTRFH_1ngTel12picozEE_3mMNiCl.0_00005\",\n",
+    "]\n",
     "# remove images to delete\n",
     "for image_name in images_to_delete:\n",
     "    len_before = len(all_stats_df)\n",
@@ -178,6 +181,7 @@
     "        tbl = grain_data[\"total_branch_lengths\"].values[0]\n",
     "        # total protein volume is just the total of all the class 2 volumes for the grain\n",
     "        total_protein_volume = grain_data[grain_data[\"class_number\"] == 2][\"volume\"].sum()\n",
+    "        total_dna_volume = grain_data[grain_data[\"class_number\"] == 1][\"volume\"].sum()\n",
     "        displayname = grain_data[\"display_name\"].values[0]\n",
     "        basename = grain_data[\"basename\"].values[0]\n",
     "\n",
@@ -192,6 +196,8 @@
     "                \"mean_branch_distance\": mean_branch_distance,\n",
     "                \"total_branch_lengths\": tbl,\n",
     "                \"total_protein_volume\": total_protein_volume,\n",
+    "                \"total_dna_volume\": total_dna_volume,\n",
+    "                \"total_grain_volume\": total_protein_volume + total_dna_volume,\n",
     "                \"display_name\": displayname,\n",
     "                \"basename\": basename,\n",
     "            }\n",
@@ -199,8 +205,19 @@
     "\n",
     "grains_df = pd.DataFrame(grains_list)\n",
     "\n",
-    "print(f\"num TRF1: {len(grains_df[grains_df['display_name'].str.contains('TRF1')])}\")\n",
-    "print(f\"num TRF2: {len(grains_df[grains_df['display_name'].str.contains('TRF2')])}\")"
+    "# print display name quantities\n",
+    "display_names = grains_df[\"display_name\"].unique()\n",
+    "for display_name in display_names:\n",
+    "    display_name_data = grains_df[grains_df[\"display_name\"] == display_name]\n",
+    "    num_grains = len(display_name_data)\n",
+    "    num_proteins = len(display_name_data[display_name_data[\"protein_present\"] == 1])\n",
+    "    num_dna = len(display_name_data[display_name_data[\"num_dna_segments\"] > 0])\n",
+    "    num_proteins_and_dna = len(\n",
+    "        display_name_data[(display_name_data[\"num_dna_segments\"] > 0) & (display_name_data[\"protein_present\"] == 1)]\n",
+    "    )\n",
+    "    print(\n",
+    "        f\"{display_name:<15} {num_grains:>4} grains, {num_proteins:>4} proteins, {num_dna:>4} dna, {num_proteins_and_dna:>4} proteins and dna\"\n",
+    "    )"
    ]
   },
   {
@@ -230,6 +247,26 @@
     "simpleticks()\n",
     "plt.show()\n",
     "\n",
+    "# Plot total grain volume vs display_name as violins\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"total_grain_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_grain_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total grain volume (nm^3)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"total grain volume for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
     "# plot protein volume against TBL for grains with protein, with volume on y and TBL on x, using jointplot\n",
     "plt.figure()\n",
     "# scatterplot\n",
@@ -239,12 +276,46 @@
     "    y=\"total_protein_volume\",\n",
     "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
     "    hue=\"display_name\",\n",
-    "    palette={\"TEL12TRF1\": \"orange\", \"TEL12TRF2\": \"blue\"},\n",
     "    alpha=0.5,\n",
+    ")\n",
+    "plt.figure()\n",
+    "# instead do jointplot with histograms instead of kde\n",
+    "sns.jointplot(\n",
+    "    x=\"total_branch_lengths\",\n",
+    "    y=\"total_protein_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    hue=\"display_name\",\n",
+    "    alpha=1,\n",
+    "    kind=\"hist\",\n",
     ")\n",
     "plt.xlabel(\"total branch lengths (nm)\")\n",
     "plt.ylabel(\"total protein volume (nm^3)\")\n",
     "# plt.title(\"total protein volume vs total branch lengths for grains with protein\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# plot TBL vs protein volume but as separate joint plots in a grid\n",
+    "plot_cols = 3\n",
+    "plot_rows = int(np.ceil(len(display_names) / plot_cols))\n",
+    "plt.figure(figsize=(plot_cols * 5, plot_rows * 5))\n",
+    "for i, display_name in enumerate(display_names):\n",
+    "    display_name_data = grains_df[grains_df[\"display_name\"] == display_name]\n",
+    "    ax = plt.subplot(plot_rows, plot_cols, i + 1)\n",
+    "    # scatterplot\n",
+    "    sns.scatterplot(\n",
+    "        x=\"total_branch_lengths\",\n",
+    "        y=\"total_protein_volume\",\n",
+    "        data=display_name_data[display_name_data[\"protein_present\"] == 1],\n",
+    "        color=\"orange\",\n",
+    "        alpha=1,\n",
+    "        ax=ax,\n",
+    "    )\n",
+    "    ax.set_title(display_name)\n",
+    "    ax.set_xlabel(\"total branch lengths (nm)\")\n",
+    "    ax.set_ylabel(\"total protein volume (nm^3)\")\n",
+    "    ax.set_xlim(0, grains_df[\"total_branch_lengths\"].max() * 1.1)\n",
+    "    ax.set_ylim(0, grains_df[\"total_protein_volume\"].max() * 1.1)\n",
+    "    ax.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
@@ -303,6 +374,57 @@
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"mean branch distance for grains with protein\")\n",
     "simpleticks()\n",
+    "plt.show()\n",
+    "\n",
+    "# total protein volume vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"total_protein_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_protein_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total protein volume (nm^3)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"total protein volume for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "# total DNA volume vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\", y=\"total_dna_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_dna_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total DNA volume (nm^3)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"total DNA volume for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "# total protein voluem vs total DNA volume\n",
+    "plt.figure()\n",
+    "sns.jointplot(\n",
+    "    x=\"total_dna_volume\",\n",
+    "    y=\"total_protein_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    hue=\"display_name\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xlabel(\"total DNA volume (nm^3)\")\n",
+    "plt.ylabel(\"total protein volume (nm^3)\")\n",
+    "plt.title(\"total protein volume vs total DNA volume for grains with protein\")\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
@@ -315,17 +437,20 @@
    "source": [
     "# stat test to see if there is a difference in TBL between TRF1 and TRF2\n",
     "from scipy import stats\n",
+    "\n",
     "# get the TBL for TRF1 and TRF2\n",
     "trf1_tbl = grains_df[grains_df[\"display_name\"].str.contains(\"TRF1\")][\"total_branch_lengths\"]\n",
     "trf2_tbl = grains_df[grains_df[\"display_name\"].str.contains(\"TRF2\")][\"total_branch_lengths\"]\n",
     "significance_level = 0.05\n",
-    "# do a t-test\n",
+    "print(\"stats tests for TBL TRF1 vs TRF2\")\n",
+    "# t-test\n",
     "t_stat, p_val = stats.ttest_ind(trf1_tbl, trf2_tbl)\n",
-    "print(f\"t-statistic: {t_stat}, p-value: {p_val} Significant: {p_val < significance_level}\")\n",
-    "# do a Mann-Whitney U test\n",
+    "print(f\"t-test: t-statistic: {t_stat:.4f}, p-value: {p_val:.4f} Significant: {p_val < significance_level}\")\n",
+    "# Mann-Whitney U test\n",
     "u_stat, p_val = stats.mannwhitneyu(trf1_tbl, trf2_tbl)\n",
-    "print(f\"U-statistic: {u_stat}, p-value: {p_val} Significant: {p_val < significance_level}\")\n",
-    "\n"
+    "print(\n",
+    "    f\"Mann-Whitney u-test: u-statistic: {u_stat:.4f}, p-value: {p_val:.4f} Significant: {p_val < significance_level}\"\n",
+    ")"
    ]
   }
  ],
