Make plot labels order consistent and add mean/median shift printer

--- a/shelterin-data-plot-redo.ipynb
+++ b/shelterin-data-plot-redo.ipynb
@@ -119,7 +119,111 @@
     "\n",
     "\n",
     "# set default font size for axes labels\n",
-    "plt.rcParams.update({\"axes.labelsize\": 16})"
+    "plt.rcParams.update({\"axes.labelsize\": 16})\n",
+    "\n",
+    "# order of samples for plotting with violin or strip plots\n",
+    "sample_order = [\n",
+    "    \"TEL12Shelterin\",\n",
+    "    \"TEL12TRF1\",\n",
+    "    \"TEL12TRF2\",\n",
+    "    \"TEL12TRF1cTRFH\",\n",
+    "    \"TEL12TRF2cTRFH\",\n",
+    "    \"TEL12TRF2dTRFH\",\n",
+    "]\n",
+    "# check all samples are present in the sample_order list\n",
+    "for sample in all_stats_df[\"display_name\"].unique():\n",
+    "    if sample not in sample_order:\n",
+    "        print(f\"sample {sample} not in sample_order\")\n",
+    "        # add the sample to the sample_order list\n",
+    "        sample_order.append(sample)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb4000fd",
+   "metadata": {},
+   "source": [
+    "### analysis functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9218974",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def percentage_shift(\n",
+    "    x: np.ndarray,\n",
+    "    y: np.ndarray,\n",
+    ") -> float:\n",
+    "    \"\"\"\n",
+    "    Calculate the percentage shift between two values.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : np.ndarray\n",
+    "        The first value.\n",
+    "    y : np.ndarray\n",
+    "        The second value.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    float\n",
+    "        The percentage shift between the two values.\n",
+    "    \"\"\"\n",
+    "    return (y - x) / x * 100\n",
+    "\n",
+    "\n",
+    "def percentage_shift_between_samples(\n",
+    "    df: pd.DataFrame, sample1: str, sample2: str, column: str, average_type: str = \"median\"\n",
+    ") -> None:\n",
+    "    \"\"\"\n",
+    "    Calculate the percentage shift between two samples for a given column and average type (mean or median).\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The DataFrame containing the data.\n",
+    "    sample1 : str\n",
+    "        The first sample to compare.\n",
+    "    sample2 : str\n",
+    "        The second sample to compare.\n",
+    "    column : str\n",
+    "        The column to compare.\n",
+    "    average_type : str\n",
+    "        The type of average to use (mean or median). Default is \"median\".\n",
+    "    \"\"\"\n",
+    "    sample_1_data = df[df[\"display_name\"] == sample1]\n",
+    "    sample_2_data = df[df[\"display_name\"] == sample2]\n",
+    "\n",
+    "    if average_type == \"mean\":\n",
+    "        sample_1_value = sample_1_data[column].mean()\n",
+    "        sample_2_value = sample_2_data[column].mean()\n",
+    "        sample_1_std = sample_1_data[column].std()\n",
+    "        sample_2_std = sample_2_data[column].std()\n",
+    "        avg_str = f\"{sample1}: mean={sample_1_value:.2f}±{sample_1_std:.2f}, {sample2}: mean={sample_2_value:.2f}±{sample_2_std:.2f}\"\n",
+    "    elif average_type == \"median\":\n",
+    "        sample_1_value = sample_1_data[column].median()\n",
+    "        sample_2_value = sample_2_data[column].median()\n",
+    "        sample_1_iqr = sample_1_data[column].quantile(0.75) - sample_1_data[column].quantile(0.25)\n",
+    "        sample_2_iqr = sample_2_data[column].quantile(0.75) - sample_2_data[column].quantile(0.25)\n",
+    "        avg_str = f\"{sample1}: median={sample_1_value:.2f}±{sample_1_iqr:.2f}, {sample2}: median={sample_2_value:.2f}±{sample_2_iqr:.2f}\"\n",
+    "    else:\n",
+    "        raise ValueError(\"average_type must be 'mean' or 'median'\")\n",
+    "    percentage_shift_value = percentage_shift(sample_1_value, sample_2_value)\n",
+    "    print(\n",
+    "        f\"percentage shift in {column} between {sample1} and {sample2}: {percentage_shift_value:.2f}%. Average type: {average_type}.\\n\"\n",
+    "        f\"Distribution info: ({avg_str})\"\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9da4fab9",
+   "metadata": {},
+   "source": [
+    "### plotting"
    ]
   },
   {
@@ -129,19 +233,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.stripplot(x=\"display_name\", y=\"area\", data=all_stats_df)\n",
+    "sns.stripplot(x=\"display_name\", y=\"area\", data=all_stats_df, order=sample_order)\n",
     "plt.xticks(rotation=90)\n",
     "plt.ylabel(\"area (nm^2)\")\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"molecule area\")\n",
+    "simpleticks()\n",
     "plt.show()\n",
     "\n",
-    "sns.stripplot(x=\"display_name\", y=\"smallest_bounding_area\", data=all_stats_df)\n",
+    "sns.stripplot(x=\"display_name\", y=\"smallest_bounding_area\", data=all_stats_df, order=sample_order)\n",
     "plt.xticks(rotation=90)\n",
     "plt.ylabel(\"smallest bounding box area (nm^2)\")\n",
     "plt.xlabel(\"sample type\")\n",
     "plt.title(\"molecule bounding box area\")\n",
     "plt.hlines(1000, xmin=-1, xmax=10, colors=\"red\", linestyles=\"dashed\")\n",
+    "simpleticks()\n",
     "plt.show()"
    ]
   },
@@ -181,6 +287,8 @@
     "        tbl = grain_data[\"total_branch_lengths\"].values[0]\n",
     "        # total protein volume is just the total of all the class 2 volumes for the grain\n",
     "        total_protein_volume = grain_data[grain_data[\"class_number\"] == 2][\"volume\"].sum()\n",
+    "        total_protein_area = grain_data[grain_data[\"class_number\"] == 2][\"area\"].sum()\n",
+    "        mean_protein_area = total_protein_area / num_protein_segments if num_protein_segments > 0 else 0\n",
     "        total_dna_volume = grain_data[grain_data[\"class_number\"] == 1][\"volume\"].sum()\n",
     "        displayname = grain_data[\"display_name\"].values[0]\n",
     "        basename = grain_data[\"basename\"].values[0]\n",
@@ -198,6 +306,8 @@
     "                \"total_protein_volume\": total_protein_volume,\n",
     "                \"total_dna_volume\": total_dna_volume,\n",
     "                \"total_grain_volume\": total_protein_volume + total_dna_volume,\n",
+    "                \"mean_protein_area\": mean_protein_area,\n",
+    "                \"total_protein_area\": total_protein_area,\n",
     "                \"display_name\": displayname,\n",
     "                \"basename\": basename,\n",
     "            }\n",
@@ -231,7 +341,11 @@
     "plt.figure()\n",
     "# stripplot with violins\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"total_branch_lengths\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_branch_lengths\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -250,7 +364,11 @@
     "# Plot total grain volume vs display_name as violins\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"total_grain_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_grain_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -322,7 +440,11 @@
     "# number of DNA segments vs display name\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"num_dna_segments\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"num_dna_segments\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -341,7 +463,11 @@
     "# number of protein segments vs display name\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"num_protein_segments\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"num_protein_segments\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -360,7 +486,11 @@
     "# mean branch distance vs display name\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"mean_branch_distance\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"mean_branch_distance\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -379,7 +509,11 @@
     "# total protein volume vs display name\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"total_protein_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_protein_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -397,7 +531,11 @@
     "# total DNA volume vs display name\n",
     "plt.figure()\n",
     "sns.violinplot(\n",
-    "    x=\"display_name\", y=\"total_dna_volume\", data=grains_df[grains_df[\"protein_present\"] == 1], color=boxplotcolour\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_dna_volume\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
     ")\n",
     "sns.stripplot(\n",
     "    x=\"display_name\",\n",
@@ -425,6 +563,51 @@
     "plt.ylabel(\"total protein volume (nm^3)\")\n",
     "plt.title(\"total protein volume vs total DNA volume for grains with protein\")\n",
     "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "# total protein area vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_protein_area\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"total_protein_area\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"total protein area (nm^2)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"total protein area for grains with protein\")\n",
+    "simpleticks()\n",
+    "plt.show()\n",
+    "# mean protein area vs display name\n",
+    "plt.figure()\n",
+    "sns.violinplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"mean_protein_area\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=boxplotcolour,\n",
+    "    order=sample_order,\n",
+    ")\n",
+    "sns.stripplot(\n",
+    "    x=\"display_name\",\n",
+    "    y=\"mean_protein_area\",\n",
+    "    data=grains_df[grains_df[\"protein_present\"] == 1],\n",
+    "    color=\"black\",\n",
+    "    alpha=0.5,\n",
+    ")\n",
+    "plt.xticks(rotation=90)\n",
+    "plt.ylabel(\"mean protein area (nm^2)\")\n",
+    "plt.xlabel(\"sample type\")\n",
+    "plt.title(\"mean protein area for grains with protein\")\n",
+    "simpleticks()\n",
     "plt.show()"
    ]
   },
